--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">BeerAdvisor</string>
-    <string name="beer_types">Beer types</string>
+    <string name="brands">No beer selected</string>
+    <string name="find_beer">Find Beer!</string>
+    <string-array name="beer_colors">
+        <item>Light</item>
+        <item>Amber</item>
+        <item>Brown</item>
+        <item>Dark</item>
+    </string-array>
 </resources>
